Fixed some CSS that was causing issues on mobile. Reduced overall font size.

--- a/css/sass/_reset.scss
+++ b/css/sass/_reset.scss
@@ -3,7 +3,7 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-body {
+html, body {
 	height: 100%;
 	width: 100%;
 	margin: 0;
